Add hacs.json and update manifest.json
Signed-off-by: Matthias Gutjahr <mattsches@gmail.com>

--- a/custom_components/pegelonline/manifest.json
+++ b/custom_components/pegelonline/manifest.json
@@ -3,9 +3,8 @@
   "name": "PEGELONLINE",
   "version": "0.1.0",
   "config_flow": true,
-  "documentation": "https://github.com/mattsches/pegelonline",
-  "requirements": [],
-  "dependencies": {},
+  "documentation": "https://github.com/mattsches/homeassistant-pegelonline",
+  "issue_tracker": "https://github.com/mattsches/homeassistant-pegelonline/issues",
   "codeowners": [
     "@mattsches"
   ]
